--- a/tallerdoom/punto1.html
+++ b/tallerdoom/punto1.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-
   <div class="navbar" id="myNavbar">
     <a href="#home" class="active">Home</a>
     <a href="#news">News</a>
@@ -22,6 +21,9 @@
     <h2>Responsive Bottom Navbar Example</h2>
     <p>Resize the browser window to see how it works.</p>
   </div>
+
+    <button class="return-home-button"><a href="INDEX.HTML">INICIO</a></button>
+
  <script src="punto1.js"></script>
 </body>
 </html>
