--- a/tallerdoom/punto2.html
+++ b/tallerdoom/punto2.html
@@ -22,5 +22,6 @@
 
     
     <script src="punto2.js"></script>
+    <button class="return-home-button"><a href="INDEX.HTML">INICIO</a></button>
 </body>
 </html>
