--- a/tallerdoom/punto3.html
+++ b/tallerdoom/punto3.html
@@ -22,6 +22,7 @@
         <p>Click on the hamburger menu/bar icon to open the sidebar, and push this content to the right.</p>
     </div>
 
+    <button class="return-home-button"><a href="INDEX.HTML">INICIO</a></button>
     <script src="punto3.js"></script>
 
 </body>
