--- a/tallerdoom/punto5.html
+++ b/tallerdoom/punto5.html
@@ -17,7 +17,7 @@
             <img src="img/advaro.png" alt="advaro">
         </p>
     </div>
-
+    <button class="return-home-button"><a href="INDEX.HTML">INICIO</a></button>
     <script src="punto5.js"></script>
 </body>
 </html>
