--- a/tallerdoom/punto4.html
+++ b/tallerdoom/punto4.html
@@ -29,6 +29,6 @@
 </div>
 
 
-
+<button class="return-home-button"><a href="INDEX.HTML">INICIO</a></button>
 <script src="punto4.js"></script>
 </body>
