--- a/tallerdoom/punto6.html
+++ b/tallerdoom/punto6.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="punto6.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,6 +17,7 @@
     </label>
     
     <div class="resultado"></div>
+    <button class="return-home-button"><a href="INDEX.HTML">INICIO</a></button>
     <script src="punto6.js"></script>
 </body>
 </html>
