--- a/tallerdoom/INDEX.HTML
+++ b/tallerdoom/INDEX.HTML
@@ -21,6 +21,7 @@
         <a href="punto8.html"> PUNTO 8 </a>
         <a href="punto9y10.html"> PUNTO 9 y 10 </a>
         <a href="punto11.html">PUNTO 11</a>
+        <a href="puntoespecial.html">SORPRESA!!!!</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon">&#9776;</a>
       </div>
 
