--- a/tallerdoom/punto5.html
+++ b/tallerdoom/punto5.html
@@ -14,18 +14,10 @@
         </label>
         <p id="text" style="display:none">
             Checkbox is CHECKED! Y ADICIONAL ERES UN CARA DE VERGA 🍆🍆🍆🍆 BY : ADVARO
-            <img src="img/advaro.png" alt="advaro">
         </p>
+        <img src="img/advaro.png" alt="advaro" id="advaroImage" style="display:none;">
     </div>
     <button class="return-home-button"><a href="INDEX.HTML">INICIO</a></button>
     <script src="punto5.js"></script>
 </body>
 </html>
-
-
- 
-
-
-
-
-
